# msa_decomp

./: README.md  makefile  pyproject.toml  requierements-freeze.txt
carrefour/: attach_globio_msa.py  extract_msa_points.py  postprocess_points.py
carrefour/legacy/: attach_legacy_msa.py  plot_legacy_msa.py
carrefour/msa_pipeline/: build_msa_cc.py  build_msa_enc.py  build_msa_lu.py  build_msa_n.py  build_msa_road.py  build_msa_square.py
carrefour/prepare/: msa_lu.py  road_grip4.py
draft/: check_datamart_years.py
legacy_msa/legacy/: plot_legacy_msa.py
scripts/: attach_globio_msa.py  build_msa_cc.py  build_msa_enc.py  build_msa_lu.py  build_msa_n.py  build_msa_road.py  build_msa_square.py  extract_msa_points.py  plot_msa_cc.py  plot_msa_enc.py  plot_msa_lu.py  plot_msa_n.py  plot_msa_road.py  plot_msa_square.py  postprocess_points.py
scripts/legacy/: add_square_check_column.py  attach_legacy_msa.py  plot_legacy_msa.py  qc_legacy_grid.py
scripts/plot/: plot_road_input.py
scripts/postprocess/: report_legacy_batch.py
scripts/prepare/: 30_prepare_grip4_road.py  40_prepare_msa_lu.py
