[project]
name = "carrefour"
version = "0.1.0"
description = ""
authors = [
    {name = "YoannPull",email = "yoann.pull.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "rasterio (>=1.4.4,<2.0.0)",
    "tifffile (>=2025.12.20,<2026.0.0)",
    "netcdf4 (>=1.7.4,<2.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "xarray (>=2025.12.0,<2026.0.0)",
    "dask (>=2025.12.0,<2026.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "rioxarray (>=0.20.0,<0.21.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "fastparquet (>=2025.12.0,<2026.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[tool.poetry]
package-mode = false
